--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -1,11 +1,11 @@
 @use "../../styles/colors";
 
 .user{
-    padding: 2rem;
+    padding: 0.5rem 1rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    column-gap: 2rem;
+    column-gap: 1rem;
 
     &-data {
         display: flex;
@@ -16,14 +16,19 @@
     
 }
 
+.user-data{
+    padding: 0;
+}
+
 .name {
-    font-size: 2.2rem;
+    font-size: 1rem;
     font-weight: bold;
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 .info{
     margin: 0;
-    font-size: 2rem;
+    font-size: 1rem;
     color: colors.$secondary_main;
 }
